Finally got some custom includes to work

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,5 +7,32 @@
   booktitle={Proceedings of the 52nd Annual IEEE/ACM International Symposium on Microarchitecture},
   pages={572--586},
   year={2019},
-  selected={true}
+  
+  selected={false},
+  abbr={ISCA'19},
+  url={https://dl-acm-org.proxy.lib.umich.edu/doi/abs/10.1145/3352460.3358306},
+  pdf={nda.pdf},
+  abstract={Speculative execution attacks like Meltdown and Spectre work by accessing secret data in wrong-path execution. Secrets are then transmitted and recovered by the attacker via a covert channel. Existing mitigations either require code modifications, address only specific exploit techniques, or block only the cache covert channel. Rather than battling exploit techniques and covert channels one by one, we seek to close off speculative execution attacks at their source. Our key observation is that these attacks require a chain of dependent wrong-path instructions to access and transmit secret data. We propose NDA, a technique to restrict speculative data propagation. NDA breaks the attacks' wrong-path dependence chains while still allowing speculation and dynamic scheduling. We describe a design space of NDA variants that differ in the constraints they place on dynamic scheduling and the classes of speculative execution attacks they prevent. NDA preserves much of the performance advantage of out-of-order execution: on SPEC CPU 2017, NDA variants close 68-96% of the performance gap between in-order and unconstrained (insecure) out-of-order execution.}
+}
+
+@inproceedings {neal2020agamotto,
+  author = {Ian Neal and Ben Reeves and Ben Stoler and Andrew Quinn and Youngjin Kwon and Simon Peter and Baris Kasikci},
+  title = {{AGAMOTTO}: How Persistent is your Persistent Memory Application?},
+  booktitle = {14th {USENIX} Symposium on Operating Systems Design and Implementation ({OSDI} 20)},
+  year = {2020},
+  isbn = {978-1-939133-19-9},
+  pages = {1047--1064},
+  url = {https://www.usenix.org/conference/osdi20/presentation/neal},
+  publisher = {{USENIX} Association},
+  month = nov,
+
+  selected={true},
+  abbr={OSDI'20},
+  url={https://www.usenix.org/conference/osdi20/presentation/neal},
+  pdf={agamotto.pdf},
+  abstract={Persistent Memory (PM) can be used by applications to directly and quickly persist any data structure, without the overhead of a file system. However, writing PM applications that are simultaneously correct and efficient is challenging. As a result, PM applications contain correctness and performance bugs. Prior work on testing PM systems has low bug coverage as it relies primarily on extensive test cases and developer annotations.
+
+  In this paper we aim to build a system for more thoroughly testing PM applications. We inform our design using a detailed study of 63 bugs from popular PM projects. We identify two application-independent patterns of PM misuse which account for the majority of bugs in our study and can be detected automatically. The remaining application-specific bugs can be detected using compact custom oracles provided by developers.
+
+  We then present AGAMOTTO, a generic and extensible system for discovering misuse of persistent memory in PM applications. Unlike existing tools that rely on extensive test cases or annotations, AGAMOTTO symbolically executes PM systems to discover bugs. AGAMOTTO introduces a new symbolic memory model that is able to represent whether or not PM state has been made persistent. AGAMOTTO uses a state space exploration algorithm, which drives symbolic execution towards program locations that are susceptible to persistency bugs. AGAMOTTO has so far identified 84 new bugs in 5 different PM applications and frameworks while incurring no false positives.}
 }
