--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -66,6 +66,7 @@ notes: https://github.com/inukshuk/jekyll-scholar
   abbr={OSDI'20},
   url={https://www.usenix.org/conference/osdi20/presentation/neal},
   pdf={agamotto.pdf},
+  awards={Awarded IEEE Micro Top Picks 2021 Honorable Mention!},
   abstract={Persistent Memory (PM) can be used by applications to directly and quickly persist any data structure, without the overhead of a file system. However, writing PM applications that are simultaneously correct and efficient is challenging. As a result, PM applications contain correctness and performance bugs. Prior work on testing PM systems has low bug coverage as it relies primarily on extensive test cases and developer annotations.
 
   In this paper we aim to build a system for more thoroughly testing PM applications. We inform our design using a detailed study of 63 bugs from popular PM projects. We identify two application-independent patterns of PM misuse which account for the majority of bugs in our study and can be detected automatically. The remaining application-specific bugs can be detected using compact custom oracles provided by developers.
