Add preprint for Hippocrates
- Also remove medium for now

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -137,7 +137,8 @@ notes: https://github.com/inukshuk/jekyll-scholar
   abbr={ASPLOS'21},
   selected={true},
   url={https://asplos-conference.org/papers/},
-  ext_abs={hippo_ea.pdf}
+  ext_abs={hippo_ea.pdf},
+  pdf={hippocrates_preprint.pdf}
 }
 
 @inproceedings{loughlin2021dolma,
