Add hippocrates PDF, can't build on windows again....

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -138,7 +138,7 @@ notes: https://github.com/inukshuk/jekyll-scholar
   selected={true},
   url={https://asplos-conference.org/papers/},
   ext_abs={hippo_ea.pdf},
-  pdf={hippocrates_preprint.pdf}
+  pdf={hippocrates.pdf}
 }
 
 @inproceedings{loughlin2021dolma,
