Add conference spec

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -145,7 +145,7 @@ notes: https://github.com/inukshuk/jekyll-scholar
 
 @inproceedings {neal2021hippocrates,
   title = {{HIPPOCRATES: Healing Persistent Memory Bugs Without Doing Any Harm}},
-  booktitle = {To appear In Proceedings of the Twenty-Sixth International Conference on Architectural Support for Programming Languages and Operating Systems (ASPLOS)},
+  booktitle = {(to appear) Proceedings of the Twenty-Sixth International Conference on Architectural Support for Programming Languages and Operating Systems (ASPLOS)},
   author={Ian Neal and Andrew Quinn and Baris Kasikci},
   year = {2021},
   url = {https://www.usenix.org/conference/fast21/presentation/neal},
@@ -189,7 +189,7 @@ notes: https://github.com/inukshuk/jekyll-scholar
 @inproceedings {khan2021dmon,
 author = {Tanvir Ahmed Khan and Ian Neal and Gilles Pokam and Barzan Mozafari and Baris Kasikci},
 title = {{DMon: Efficient Detection and Correction of Data Locality Problems using Selective Profiling}},
-booktitle = {15th {USENIX} Symposium on Operating Systems Design and Implementation ({OSDI} 21)},
+booktitle = {(to appear) 15th {USENIX} Symposium on Operating Systems Design and Implementation ({OSDI} 21)},
 year = {2021},
 publisher = {{USENIX} Association},
 month = jul,
