Fix links, update PDF

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -154,7 +154,6 @@ notes: https://github.com/inukshuk/jekyll-scholar
   type={peer-reviewed},
   abbr={ASPLOS'21},
   selected={true},
-  url={https://asplos-conference.org/papers/},
   ext_abs={hippo_ea.pdf},
   pdf={hippocrates.pdf},
   abstract={Persistent memory (PM) technologies aim to revolutionize storage
@@ -196,7 +195,7 @@ month = jul,
 selected={false},
 type={peer-reviewed},
 url={https://www.usenix.org/conference/osdi21/presentation/khan},
-pdf={dmon_preprint.pdf},
+pdf={dmon.pdf},
 abbr={OSDI'21},
 abstract={Poor data locality hurts an application’s performance. While 
 compiler-based techniques have been proposed to improve data locality, 
@@ -217,7 +216,7 @@ Thanks to selective profiling, DMon’s profiling overhead is 1.36% on average, 
   publisher = {{USENIX} Association},
   month = aug,
 
-  pdf={dolma_preprint.pdf},
+  pdf={dolma.pdf},
   type={peer-reviewed},
   url={https://www.usenix.org/conference/usenixsecurity21/presentation/loughlin},
   abbr={USENIX Sec'21},
