Remove to appear

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -210,7 +210,7 @@ Thanks to selective profiling, DMon’s profiling overhead is 1.36% on average, 
 @inproceedings{loughlin2021dolma,
   title = {{DOLMA: Securing Speculation with the Principle of Transient Non-Observability}},
   author={Loughlin, Kevin and Neal, Ian and Ma, Jiacheng and Tsai, Elisa and Weisse, Ofir and Narayanasamy, Satish and Kasikci, Baris},
-  booktitle = {(to appear) 30th {USENIX} Security Symposium ({USENIX} Security 21)},
+  booktitle = {30th {USENIX} Security Symposium ({USENIX} Security 21)},
   year = {2021},
   address = {Vancouver, B.C.},
   publisher = {{USENIX} Association},
