Remove (to appear), add some news items

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -187,7 +187,7 @@ notes: https://github.com/inukshuk/jekyll-scholar
 @inproceedings {khan2021dmon,
 author = {Tanvir Ahmed Khan and Ian Neal and Gilles Pokam and Barzan Mozafari and Baris Kasikci},
 title = {{DMon: Efficient Detection and Correction of Data Locality Problems using Selective Profiling}},
-booktitle = {(to appear) 15th {USENIX} Symposium on Operating Systems Design and Implementation ({OSDI} 21)},
+booktitle = {15th {USENIX} Symposium on Operating Systems Design and Implementation ({OSDI} 21)},
 year = {2021},
 publisher = {{USENIX} Association},
 month = jul,
